# fraud-detection-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dockerignore  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
conf/: parameters.yml
data/05_monitoring/: drift_report.html  psi.csv
notebooks/: eda.ipynb
src/fraud_detection/: config.py
src/fraud_detection/data/: features.py  load.py
src/fraud_detection/models/: evaluate.py  train.py
src/fraud_detection/monitoring/: drift_report.py  psi.py
src/fraud_detection/pipelines/: data_pipeline.py  training_pipeline.py
src/fraud_detection/serving/: app.py  feature_store.py  rules.py  schemas.py
tests/: test_api.py  test_features.py  test_train_serve_consistency.py
